2004-05-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b136

	* Change: Watermarking code was missing some quotes around "checked"
	  in several locations

2004-05-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b135

	* Change: A couple "&nbsp" => "&nbsp;" text fixes

	* 957300: Prevent two different-format images from being uploaded
	  with the same basename.  (i.e.  hello.jpg and hello.gif don't both
	  end up being tagged as "hello")

2004-05-21  Jens Tkotz <jens@peino.de>  1.4.4-cvs-b134

	* Change: Revert part of b129. Only Album title is now a link.

	* Fix: Removed warning in view_photo

	* Change: show "no Caption" in view_photo, if photo has no caption

	* Fix: removed default class in function showChoice in view_album, 
	       due to unreadable pulldown menu in some skins.

2004-05-21  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b133

	* Change: Add a check to available_skins() to fix URLs when 
	  photoAlbumURL isn't set yet

	* Change: Un-hide devMode in the Technical section of the
	  config wizard, with a warning for non-PHP-savvy users

	* Change: Fix typo in config wizard text

2004-05-20  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b132

	* Change: Revert xhtml

2004-05-20  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b131

	* Change: docType() now returns XHTML 1.0 Transitional

	* Change: Beginning of translation to XHTML 1.0 Transitional
	  albums.php validates, when albumTree is turned off

2004-05-19  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b130

	* Change: Add missing text to phpBB2 manual-howto

	* Change: Descriptive text for find_orphans

2004-05-19  Jens Tkotz <jens@peino.de>  1.4.4-cvs-b129

	* New: Album title, photo and movie captions are now links in view_album.

2004-05-18  Christian Mohn <h0bbel@p0ggel.org>  1.4.4-cvs-b128
	
	* Fix: Changed view_photo.php to show the photoname, and not the index if there
	  is no custom field called Title 
